fixed menu bar on mobile

--- a/css/common.css
+++ b/css/common.css
@@ -64,7 +64,16 @@ span a {
     text-align: center;
     font-size: 3vh;
 }
-
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: black;
+    }
+    #menu ul {
+        background-color: #333;
+        display: flex;
+        flex-flow:  column nowrap;
+    }
+  }
 #menu ul {
     display: flex;
     justify-content: space-around;
